--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ jinja2 = "*"
 gitpython = "*"
 configargparse = "*"
 semver = "*"
+maya = "*"
+humanize = "*"
 
 [requires]
 python_version = "3.8"
